# mausy5043_common

./: .pre-commit-config.yaml  README.md  build  environment.yml  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: release.yml
src/mausy5043_common/: funfile.py  libsqlite3.py  libsqlite3.pyi
