# Hatchling  https://packaging.python.org/en/latest/key_projects/#hatch
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mausy5043-common"
version = "1.0.2"
dependencies = [
    "numpy",
    "pandas",
]
authors = [
  { name="Mausy5043", email="mausy5043@example.com" },
]
description = "Common python functions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Mausy5043/mausy5043-common"
"Bug Tracker" = "https://github.com/Mausy5043/mausy5043-common/issues"
